--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Back/var/cache/dev/App_KernelDevDebugContainer.php.meta
 Back/var/cache/dev/App_KernelDevDebugContainer.preload.php
 
 Back/var/cache/dev/App_KernelDevDebugContainer.xml.meta
+
+TODOS/
