--- a/Back/composer.json
+++ b/Back/composer.json
@@ -1,4 +1,6 @@
 {
+    "name":"symfony/symfony",
+    "description": "Website hop hop hop livraison",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "dev",
