--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Back/var/cache/dev/App_KernelDevDebugContainer.preload.php
 Back/var/cache/dev/App_KernelDevDebugContainer.xml.meta
 
 TODOS/
+
+info.md
