--- a/Back/config/packages/security.yaml
+++ b/Back/config/packages/security.yaml
@@ -35,5 +35,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/dev, roles: ROLE_DEV }
+        - { path: ^/back/admin, roles: ROLE_ADMIN }
+        - { path: ^/back/dev, roles: [ROLE_DEV,ROLE_ADMIN] }
