--- a/Back/.env
+++ b/Back/.env
@@ -24,7 +24,7 @@ APP_SECRET=9cbbfe109ee92f71c13845d2c7576856
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 #DATABASE_URL="mysql://root:root@127.0.0.1:3306/planflow?serverVersion=5.7"
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/planflow_dev?serverVersion=5.7"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/planflow_development?serverVersion=5.7"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
