--- a/Back/config/packages/security.yaml
+++ b/Back/config/packages/security.yaml
@@ -37,5 +37,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/back, roles: [ROLE_DEV,ROLE_ADMIN] }
         - { path: ^/back/admin, roles: ROLE_ADMIN }
         - { path: ^/back/dev, roles: [ROLE_DEV,ROLE_ADMIN] }
